<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>select_emu_status_widget</class>
 <widget class="QWidget" name="select_emu_status_widget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>971</width>
    <height>829</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3,1,3,20,1">
     <item>
      <widget class="QLabel" name="emu_cid_lb">
       <property name="text">
        <string>网关编号</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="emu_cid_edt"/>
     </item>
     <item>
      <widget class="QLabel" name="date_lb">
       <property name="text">
        <string>日期</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="CDateEdit" name="date_edt" native="true">
       <property name="styleSheet">
        <string notr="true">QDateEdit
{
    border: 1px solid #dbdbdb;
    color: #666666;
    font: 30px &quot;微软雅黑&quot;;
}

QDateEdit:on { /* shift the text when the popup opens */
    padding-top: 3px;
    padding-left: 4px;
}

QDateEdit::drop-down {
    subcontrol-origin: padding;
    subcontrol-position: top right;
    width: 40px;

    border-left-color: darkgray;
    border-left-style: solid; /* just a single line */
    border-top-right-radius: 3px; /* same radius as the QComboBox */
    border-bottom-right-radius: 3px;
}

QDateEdit::down-arrow {
    image: url(:/icon/icon/calendar.ico);
}

QDateEdit::down-arrow:on { /* shift the arrow when popup is open */
    top: 1px;
    left: 1px;
}</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="select_pb">
       <property name="text">
        <string>查询</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTableWidget" name="tableWidget"/>
   </item>
   <item>
    <widget class="flipover_widget" name="flipover_wd" native="true"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CDateEdit</class>
   <extends>QWidget</extends>
   <header location="global">cdateedit.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>flipover_widget</class>
   <extends>QWidget</extends>
   <header location="global">flipover_widget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
